# raster-ii

./: .gitignore  LICENSE  Makefile  README.md  build.sbt  flake.nix
assets/: image.hex
cpu/: CPU.mk  Makefile  setup.sh
cpu/bare-program/: Cargo.toml  Makefile  memory.x
cpu/bare-program/.cargo/: config.toml
cpu/bare-program/src/: main.rs  print.rs  timer.rs
cpu/ulx3s-hal/: Cargo.toml
cpu/ulx3s-hal/src/: lib.rs  ulx3s.svd
sim/: Makefile  sim.cpp
src/main/scala/: PatternGenerator.scala  Raster.scala  VgaController.scala
src/main/scala/display/: Bc1Block.scala  Bc1Compressor.scala  Bc1Decompressor.scala  DisplayController.scala  VideoGenerator.scala
synth/: raster.ys  top.v
synth/ulx3s/: Makefile  raster.tcl  tmds_encoder.v  top.v  ulx3s.lpf
