[package]
name = "ulx3s-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
bare-metal = "1.0"
riscv = "0.10"
vcell = "0.1"
riscv-rt = { optional = true, version = "0.14.0" }

[build-dependencies]
svd2rust = { version = "0.36", default-features = false }

[features]
default = ["rt"]
rt = ["dep:riscv-rt"]
